--- a/pom.xml
+++ b/pom.xml
@@ -212,5 +212,14 @@
 			<version>3.6.0</version>
 			<classifier>models-chinese</classifier>
 		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20160810</version>
+		</dependency>
+
 	</dependencies>
 </project>
